--- a/src/main/resources/templates/review/write.html
+++ b/src/main/resources/templates/review/write.html
@@ -2,7 +2,7 @@
 <!-- 리뷰 작성 페이지 -->
 
 
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>덕스러운 학식생활</title>
