--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <title>덕스러운 학식생활</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap}" rel="stylesheet">
   <style>
+        * {
+            font-family: 'Manrope', sans-serif;
+        }
+
+        <style>
         * {
             font-family: 'Manrope', sans-serif;
         }
@@ -127,9 +132,10 @@
 </head>
 
 <body>
-<a class="title" href="main.html" style="color:#F6E6E4 ;"><strong><span style="color: #BE0D37;"> 덕</span><span
+<a class="title" th:href="@{main.html}" style="color: #F6E6E4;"><strong><span style="color: #BE0D37;"> 덕</span><span
         style="color: #773D30;">스러운 </span><span style="color: #FB9718;">학식</span><span
         style="color: #773D30;">생활</span></strong></a>
+
 </div>
 <div>
   <hr size="2" noshade style="color: #FB9718;">
@@ -140,13 +146,11 @@
     <a class="nav-link" href="now.html">현황</a>
     <a class="nav-link" href="notice.html">알림</a>
     <a class="nav-link" href="login.html" style="text-align:right"><strong>Log in</strong></a>
-    <a class="nav-link" href="mypage.html" style="text-align:right"><strong>My Page</strong></a>
   </nav>
 </div>
 <hr size="2" noshade style="color: #FB9718;">
 
 <header class="py-5">
-
   <p style="text-align: center; font-size: 40px;"><strong><span style="color: #773D30;">LOGIN</strong></p>
   <p style="text-align: center; font-size: 20px; color: #773D30;">덕스러운 학식생활에 오신 것을 환영합니다.</p>
 </header>
@@ -154,26 +158,15 @@
 <br>
 <br>
 <div class="login">
-  <header class="py-5">
-    <p style="text-align: center; font-size: 40px;"><strong><span style="color: #773D30;">LOGIN</span></strong></p>
-    <p style="text-align: center; font-size: 20px; color: #773D30;">덕스러운 학식생활에 오신 것을 환영합니다.</p>
-  </header>
-  <hr style="width:500px;">
-  <br>
-  <br>
-  <div class="login">
-    <!-- action과 method 설정 -->
-    <form action="/login" method="post">
-      <input type="text" name="username" class="text-field" placeholder="ID">
-      <input type="password" name="password" class="text-field" placeholder="Password">
-      <input type="checkbox" id="remember-check">학번/교직원 번호 저장
-      <br>
-      <br>
-      <input type="submit" value="Login" class="submit-btn">
-    </form>
-  </div>
+  <form th:action="@{/perform_login}" method="post">
+    <input type="text" name="username" class="text-field" placeholder="ID">
+    <input type="password" name="password" class="text-field" placeholder="Password">
+    <input type="checkbox" id="remember-check">학번/교직원 번호 저장
+    <br>
+    <br>
+    <input type="submit" value="Login" class="submit-btn">
+    </div>
+  </form>
 </div>
-
 </body>
-
 </html>
